@@ -17,6 +17,12 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Fix some nrof issues when many items. Always return real money value.
+ server/c_object.c: divide before multiply to avoid some overflows.
+ server/c_wiz.c: nrof is uint32.
+ server/shop.c: nrof is uint32. Money we know the real value.
+Nicolas Weeger 2007-12-01
+
 Fix bug #1827100: Curse dection not working or problem with containers ?
  server/alchemy.c: ensure cursed items can be identified.
  server/skills.c: cauldrons are always checked for curse status, it is important to know it.
